--- a/frontend/src/components/views/upload-users/pokemonForm.astro
+++ b/frontend/src/components/views/upload-users/pokemonForm.astro
@@ -40,7 +40,7 @@ const { token } = Astro.props;
 
         <p class="mt-4 text-gray-400">
             <a
-                href={ROUTES.USER.ACHIEVEMENTS}
+                href={ROUTES.USER.ACHIEVEMENTS.PATH}
                 class="text-pokemon-light hover:text-white transition-colors duration-300"
             >
                 ver mis medallas
