--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -11,9 +11,9 @@ const { data } = await Astro.callAction(actions.getCookies,{}) || {};
 if(data){
 	const user: User = JSON.parse(data.value) as User
 	if(isAdmin(user.role))
-		return Astro.redirect(ROUTES.ADMIN.ACCEPTREQUEST);
+		return Astro.redirect(ROUTES.ADMIN.ACCEPTREQUEST.PATH);
 	else
-		return Astro.redirect(ROUTES.USER.UPLOADPOKEMONS);
+		return Astro.redirect(ROUTES.USER.UPLOADPOKEMONS.PATH);
 }
 ---
 
