--- a/frontend/src/pages/user/upload-pokemons.astro
+++ b/frontend/src/pages/user/upload-pokemons.astro
@@ -19,6 +19,6 @@ if(data){
 
 ---
 
-<Layout isUser>
-    <PokemonForm  token={tokenUser}/>
+<Layout isUser server:defer>
+    <PokemonForm server:defer  token={tokenUser}/>
 </Layout>
