--- a/frontend/src/pages/admin/history-accepts.astro
+++ b/frontend/src/pages/admin/history-accepts.astro
@@ -50,7 +50,7 @@ if (responseAccepts.ok) {
 
 ---
 
-<Layout isUser>
+<Layout isUser server:defer>
     <section class="container space-y-4 py-4">
         <h2
             class="text-lg md:text-xl text-white font-semibold px-4 md:px-0"
