Add test configuration in astro ufff harder

--- a/frontend/src/components/views/login/loginForm.astro
+++ b/frontend/src/components/views/login/loginForm.astro
@@ -1,6 +1,6 @@
 ---
 import Input from "@/components/shared/input.astro";
-import Button from "@/components/shared/button.astro";
+import Button from "@/components/shared/button";
 import ErrorMessage from "@/components/shared/errorMessage.astro";
 import Loader from "@/components/shared/loader.astro";
 ---
