--- a/frontend/src/components/views/upload-users/pokemonForm.astro
+++ b/frontend/src/components/views/upload-users/pokemonForm.astro
@@ -1,6 +1,6 @@
 ---
 import Input from "@/components/shared/input.astro";
-import Button from "@/components/shared/button.astro";
+import Button from "@/components/shared/button";
 import { ROUTES } from "@/helpers/constants";
 import ProgressBar from "@/components/shared/progressBar.astro";
 import MedalForm from "./medalForm.astro";
