--- a/frontend/src/components/shared/button.astro
+++ b/frontend/src/components/shared/button.astro
@@ -1,4 +1,10 @@
 ---
+interface Props {
+  type: 'button' | 'submit' | 'reset';
+  text: string;
+  classText?: string;
+  id?: string;
+}
 const { type, text, classText, id } = Astro.props;
 ---
 
