Adding unit test to button and config to use vitest with version beta vitest

--- a/frontend/src/components/shared/button.astro
+++ b/frontend/src/components/shared/button.astro
@@ -1,9 +1,9 @@
 ---
 interface Props {
-  type: 'button' | 'submit' | 'reset';
-  text: string;
-  classText?: string;
-  id?: string;
+	type: "button" | "submit" | "reset";
+	text: string;
+	classText?: string;
+	id?: string;
 }
 const { type, text, classText, id } = Astro.props;
 ---
