--- a/frontend/src/pages/admin/accept.astro
+++ b/frontend/src/pages/admin/accept.astro
@@ -50,7 +50,7 @@ if (responseAccepts.ok) {
 }
 ---
 
-<Layout isUser server:defer>
+<Layout isUser >
         <section class="container space-y-4 py-4 overflow-hidden">
             <h2
                 class="text-lg md:text-xl text-white font-semibold px-4 md:px-0"
