--- a/frontend/src/pages/user/achievements.astro
+++ b/frontend/src/pages/user/achievements.astro
@@ -45,7 +45,7 @@ if (responsePokemonsRegisters.ok) {
 }
 ---
 
-<Layout isUser server:defer>
+<Layout isUser >
     <div class="flex flex-col items-center pb-4">
         <h1 class="text-3xl font-bold text-white my-2">Mis Medallas</h1>
         <div class="flex gap-4 justify-between w-full items-center mb-4">
